--- a/saas_demos/src/demo1.html
+++ b/saas_demos/src/demo1.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="..\css\extrastyle.css">
 </head>
+<link rel="stylesheet" href="..\css\demo1.css">
+
 <body>
-    <p>a para</p>
-    <a href="#">click here</a>
-    <nav>
-        <ul>
-            <li><a href="#">list item1</a></li>
-            <li><a href="#">list item2</a></li>
-        </ul>
-    </nav>
+<h3>welcome</h3>
+
+<h2 class="c1">Lovely day</h2>
+<p id="p1">this is a new para</p>
+<p>this is decided by if else</p>
 </body>
 </html>
