--- a/saas_demos/javascript/CH19 multiple elements/index.html
+++ b/saas_demos/javascript/CH19 multiple elements/index.html
@@ -5,16 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="..\css\extrastyle.css">
 </head>
+<link rel="stylesheet" href="..\css\.css">
+
 <body>
-    <p>a para</p>
-    <a href="#">click here</a>
-    <nav>
-        <ul>
-            <li><a href="#">list item1</a></li>
-            <li><a href="#">list item2</a></li>
-        </ul>
-    </nav>
+
+<script src="app.js">
+
+</script>
 </body>
 </html>
